# gesture_recognition

./: CMakeLists.txt  README.md  package.xml
launch/: gesture_rec_demo.launch  gesture_recognition.launch
lib/: CMakeLists.txt
lib/gesture_recognition/include/: gesture_recognition.h
lib/gesture_recognition/src/: gesture_recognition.cpp  gesture_recognition_node.cpp
lib/include/gesture_recognition_lib/: gesture_recognition.h
lib/src/gesture_recognition_lib/: gesture_recognition.cpp
msg/: GestureState.msg  RecState.msg
src/: gesture_recognition_node.cpp
srv/: DoAction.srv  RecordSample.srv  TrainPipeline.srv
